# AMVerge

./: .amverge-run-stamp  .gitignore  AGENTS.md  CODE_OF_CONDUCT  CONTRIBUTING.md  LICENSE  README.md  TODO.txt  documentation.md  import_export_plan_split.txt  python backend_script.py .testfrier.txt  todo.txt
.github/workflows/: ci.yml  mac-dev-build.yml  release-multi-platform.yml
backend/: BRAINSTORMING.txt  PLAN_FOR_BACKEND_PIPELINE.txt  README.md  TODO.txt  app.py  backend_script.py  backend_script.spec  commands.txt  frame.txt  learning.ipynb  main.py  requirements.txt  scenedetect_test.ipynb  test.ipynb  truth_table.txt  utils.py
backend/deprecated/: deprecated_app.py  video_utils.py  (+1 more)
frontend/: package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.macos.intel.conf.json  tauri.macos.universal.conf.json  tauri.windows.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs  payloads.rs  state.rs
frontend/src-tauri/src/commands/: cache.rs  discord.rs  editor_import.rs  export.rs  export_xml.rs  filmstrip.rs  frame_cache.rs  mod.rs  notifications.rs  preview.rs  scenes.rs  settings.rs
frontend/src-tauri/src/commands/editor_import/: after_effects.rs  capcut.rs  davinci_resolve.rs  premier_pro.rs  premiere_pro.rs
frontend/src-tauri/src/commands/export/: encode.rs  hardware.rs  merge.rs  multi.rs  ops.rs  probe.rs  types.rs
frontend/src-tauri/src/commands/export_xml/: timeline_document.rs
frontend/src-tauri/src/utils/: ffmpeg.rs
(+175 files in other folders)
